# wind

./: .env  .gitignore  .gitmodules  CODE_REVIEW.md  CODE_REVIEW_ROUND2.md  Cargo.toml  Cross.toml  LLM.md  NOTES.md  README.md  _typos.toml  justfile  rustfmt.toml
.cargo/: config.toml
.cross/: Dockerfile
.github/: Dockerfile  Dockerfile_TUIC  cliff.toml  sccache-wrapper.sh  sccache.sh  target.toml
.github/workflows/: ci.yml  codspeed.yml
crates/tuic-client/: Cargo.toml
crates/tuic-client/src/: config.rs  error.rs  forward.rs  lib.rs  main.rs  utils.rs  wind_adapter.rs
crates/tuic-client/src/socks5/: handle_task.rs  mod.rs  udp_session.rs
crates/tuic-client/tests/: graceful_shutdown.rs
crates/tuic-client/tests/config/: no_proxy.toml  proxy_defaults.json5  proxy_json5.json5  proxy_minimal.toml  proxy_yaml.yaml
crates/tuic-core/: Cargo.toml
crates/tuic-core/src/: lib.rs  udp.rs
crates/tuic-core/src/proto/: addr.rs  cmd.rs  error.rs  header.rs  mod.rs
crates/tuic-proto/: Cargo.toml
crates/tuic-proto/src/: addr.rs  cmd.rs  header.rs  lib.rs  udp_stream.rs
crates/tuic-server/: Cargo.toml
crates/tuic-server/src/: acl.pest  acl.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  server.rs  tls.rs  utils.rs  wind_adapter.rs
crates/tuic-server/src/legacy/: acl.pest  mod.rs
crates/tuic-server/tests/: geodata_routing.rs  legacy_acl_routing.rs
crates/tuic-server/tests/config/: acl_parsing.toml  json5_comprehensive_features.json5  rules_empty.toml  rules_parsing.toml  rules_with_acl.toml  valid_toml_config.toml  yaml_config_format.yaml
crates/tuic-tests/: Cargo.toml
crates/tuic-tests/src/: lib.rs
crates/tuic-tests/tests/: integration_tests.rs  ipv6_integration.rs  masquerade.rs  protocol_tests.rs  proxy_config.rs  quiche_cert_reload.rs  quiche_integration.rs  quiche_zero_rtt.rs  quinn_zero_rtt.rs
crates/wind/: Cargo.toml
crates/wind-acl/: Cargo.toml
crates/wind-acl-ir/: Cargo.toml
crates/wind-acl-ir/src/: config.rs  engine.rs  lib.rs  model.rs  optimize.rs
crates/wind-acl-ir/src/syntax/: mod.rs
crates/wind-acl-ir/tests/: regression.rs  routing.rs
crates/wind-acl/src/: acl.rs  config.rs  embed.rs  engine.rs  eval.rs  lib.rs  model.rs  optimize.rs
crates/wind-acl/src/syntax/: apernet.pest  apernet.rs  metacubex.rs  mod.rs
crates/wind-acl/src/syntax/apernet/: mod.rs
crates/wind-acl/tests/: geodata_routing.rs  regression.rs  routing.rs
crates/wind-acme/: Cargo.toml
crates/wind-acme/src/: http01.rs  lib.rs  resolver.rs  selfsigned.rs
crates/wind-base/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/wind-base/src/: direct.rs  lib.rs  resolve.rs  tunnel.rs
crates/wind-base/tests/: udp_relay.rs
crates/wind-core/: Cargo.toml
crates/wind-core/examples/: hooks.rs
crates/wind-core/src/: active.rs  app.rs  dispatcher.rs  inbound.rs  interface.rs  io.rs  lib.rs  log.rs  outbound.rs  quic.rs  resolve.rs  rule.rs  signal.rs  tcp.rs  types.rs  udp.rs  udp_tests.rs  utils.rs
crates/wind-core/src/hooks/: counting.rs  mod.rs  stats.rs
crates/wind-dns/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/wind-dns/src/: config.rs  lib.rs  resolver.rs
crates/wind-geodata/: Cargo.toml
crates/wind-geodata/benches/: query_bench.rs
crates/wind-geodata/src/: builder.rs  error.rs  lib.rs  query.rs  snapshot.rs
crates/wind-geodata/testdata/: .gitignore
crates/wind-naive/: Cargo.toml  README.md
crates/wind-naive/src/: lib.rs  uot.rs
crates/wind-quic/: Cargo.toml
crates/wind-quic/src/: config.rs  error.rs  h3_adapter.rs  lib.rs  prefixed.rs  traits.rs
crates/wind-quic/src/quiche/: conn.rs  driver.rs  mod.rs  stream.rs  tls.rs
crates/wind-quic/src/quinn/: mod.rs  tls.rs
crates/wind-quic/tests/: loopback.rs
crates/wind-socks/: Cargo.toml
crates/wind-socks/src/: action.rs  ext.rs  inbound.rs  lib.rs  outbound.rs  udp.rs
crates/wind-socks/tests/: graceful_shutdown.rs  socks_tcp.rs  udp_source_check.rs
crates/wind-test/: Cargo.toml
crates/wind-test/benches/: arc_bench.rs
crates/wind-test/src/: lib.rs  socks5.rs  tuic.rs
crates/wind-tuic/: Cargo.toml  README.md  SPEC.md
crates/wind-tuic/src/: active.rs  inbound.rs  lib.rs  outbound.rs  simple_udp.rs  task.rs  tls.rs  utils.rs
crates/wind-tuic/src/client/: mod.rs
crates/wind-tuic/src/proto/: addr.rs  client_proto.rs  cmd.rs  error.rs  header.rs  mod.rs  tests.rs  udp_stream.rs
crates/wind-tuic/src/quiche/: inbound.rs  mod.rs  outbound.rs  task.rs  tls.rs  utils.rs
crates/wind-tuic/src/quinn/: inbound.rs  mod.rs  outbound.rs  task.rs  tls.rs  utils.rs
crates/wind-tuic/src/server/: masquerade.rs  mod.rs
crates/wind-tuic/tests/: integration_test.rs
crates/wind-tuiche/: Cargo.toml  README.md
crates/wind-tuiche/src/: driver.rs  inbound.rs  lib.rs  outbound.rs  stream.rs  task.rs  tls.rs  utils.rs
crates/wind-tuiche/src/proto/: addr.rs  cmd.rs  error.rs  header.rs  mod.rs  udp_stream.rs
crates/wind-tuiche/tests/: integration_test.rs  protocol_test.rs
crates/wind/src/: cli.rs  lib.rs  log.rs  main.rs  util.rs
crates/wind/src/conf/: persistent.rs  runtime.rs
crates/wind/tests/: config_naive.toml  config_test.rs
docs/: ARCHITECTURE.md
patches/datagram-socket/: Cargo.toml
patches/datagram-socket/src/: buffer.rs  mmsg.rs
patches/tokio-quiche/: Cargo.toml  rustfmt.toml
patches/tokio-quiche/src/quic/io/: gso.rs
patches/tokio-quiche/src/settings/: config.rs  quic.rs
specs/: acl-ir.md  acl-ir.zh_CN.md  anytls.md  anytls.zh_CN.md  example.md  hyteria.md  hyteria.zh_CN.md  naive.md  naive.zh_CN.md  tuic.md  tuic.zh_CN.md
