[workspace]
resolver = "2"

members = [
    "crates/*",
]

[workspace.package]
version = "0.1.1"
authors = ["proxy-rs"]
repository = "https://github.com/proxy-rs/wind"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
description = "Placeholder"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
quinn = { branch = "bbrv3", git = "https://github.com/Tipuch/quinn.git", default-features = false }
quinn-proto = { branch = "bbrv3", git = "https://github.com/Tipuch/quinn.git", default-features = false }
quinn-congestions = { git = "https://github.com/proxy-rs/quinn-congestions.git", default-features = false }

# Patch datagram-socket to fix build failure on musl targets with libc >= 0.2.169.
# libc::msghdr gained private padding fields (__pad1, __pad2) that prevent
# struct literal construction. Fix from: https://github.com/cloudflare/quiche/pull/2224
# [patch.crates-io]
# datagram-socket = { path = "patches/datagram-socket" }

[profile.release]
opt-level = "z"
debug = 1
lto = "fat"
strip = true
incremental = false
codegen-units = 1

[profile.fast-release]
inherits = "release"
#opt-level = "z"
debug = 1
#lto = "fat"
strip = true
#incremental = false
#codegen-units = 1