[workspace]
resolver = "2"

members = [
    "crates/*",
]

# Vendored `[patch.crates-io]` crates live under patches/ but must not be treated
# as workspace members (otherwise fmt/clippy/-D warnings would apply to upstream
# code). Excluding them keeps cargo treating them as plain (cap-lint'd) deps.
exclude = [
    "patches/datagram-socket",
    "patches/tokio-quiche",
    # Submodule fork of rustls-acme (forks/). Used via a git dependency pinned to
    # the `ihsin` branch, not as a workspace member; the local checkout is for
    # reference/editing only. Excluded so cargo doesn't treat it as a member.
    "forks/rustls-acme",
]

[workspace.package]
version = "0.2.0"
authors = ["proxy-rs"]
repository = "https://github.com/proxy-rs/wind"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
description = "Placeholder"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
quinn = { branch = "bbrv3", git = "https://github.com/Tipuch/quinn.git", default-features = false }
quinn-proto = { branch = "bbrv3", git = "https://github.com/Tipuch/quinn.git", default-features = false }
quinn-congestions = { git = "https://github.com/proxy-rs/quinn-congestions.git", default-features = false }

[patch.crates-io]
datagram-socket = { path = "forks/quiche/datagram-socket" }
tokio-quiche = { path = "forks/quiche/tokio-quiche" }

[profile.release]
opt-level = 3
debug = 1
lto = "fat"
strip = true
incremental = false
codegen-units = 1

[profile.fast-release]
inherits = "release"
opt-level = 1
debug = 1
lto = "thin"
strip = false
incremental = true
codegen-units = 16
