[package]
name = "tuic-core"
version.workspace = true
repository.workspace = true
edition.workspace = true
description = "Backend-agnostic TUIC protocol codecs and state machine shared by wind-tuic's quinn and quiche backends"
license = "MIT OR Apache-2.0"

[features]
default = ["encode", "decode"]
# Enables the `Decoder` codec impls (server / decode path).
decode = []
# Enables the `Encoder` codec impls (client / encode path).
encode = []

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core", default-features = false }

# Wire codecs
bytes = "1"
nom = "8"
tokio-util = { version = "0.7", features = ["codec"] }
num_enum = "0.7"
snafu = "0.9"
uuid = { version = "1", features = ["v4"] }

# UDP fragment reassembly state machine
moka = { version = "0.12", features = ["future"] }
arc-swap = "1.9.1"

# Shared
eyre = "0.6"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = "0.1"
test-log = { version = "0.2", features = ["trace"] }
eyre = "0.6"
hex = { package = "const-hex", version = "1" }
