[package]
name = "tuic-proto"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true

[features]
default = ["encode", "decode"]
decode = []
encode = []

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core" }
bytes = "1"
uuid = "1"
eyre = "0.6"
tokio = { version = "1", default-features = false, features = ["net", "time", "sync"] }
quinn = { workspace = true, default-features = false, features = ["runtime-tokio"] }
crossfire = { version = "2", features = ["tokio"] }
moka = { version = "0.12", features = ["future"] }
snafu = "0.8"
num_enum = "0.7"
tokio-util = { version = "0.7", features = ["codec"] }
hex = { package = "const-hex", version = "1" }
arc-swap = "1.9.1"
