[package]
name = "tuic-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["aws-lc-rs"]
ring = ["wind-tuic/ring", "rustls/ring", "tuic-client/ring", "tuic-server/ring"]
aws-lc-rs = ["wind-tuic/aws-lc-rs", "dep:aws-lc-rs", "rustls/aws-lc-rs", "tuic-client/aws-lc-rs", "tuic-server/aws-lc-rs"]

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core" }
tuic-core = { path = "../tuic-core" }
tuic-client = { path = "../tuic-client", default-features = false }
tuic-server = { path = "../tuic-server", default-features = false }
wind-tuic = { path = "../wind-tuic", default-features = false, features = ["server", "client", "quinn"] }
wind-tuiche = { path = "../wind-tuiche", default-features = false, features = ["server"] }

# Raw QUIC client + cert generation for the certificate hot-reload test.
quinn = { workspace = true, default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }

bytes = "1"
json5 = { version = "1.3" }
lexopt = { version = "0.3" }
eyre = { version = "0.6" }
fast-socks5 = { version = "1" }
rustls = { version = "0.23", default-features = false }
tracing-test = { version = "0.2" }
tracing = "0.1"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
aws-lc-rs = { version = "1", default-features = false, optional = true, features = ["prebuilt-nasm"] }
uuid = "1"
tokio-util = { version = "0.7", features = ["codec"] }