[package]
name = "tuic-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["aws-lc-rs"]
ring = ["wind-tuic/ring", "rustls/ring", "tuic-client/ring", "tuic-server/ring"]
aws-lc-rs = ["wind-tuic/aws-lc-rs", "dep:aws-lc-rs", "rustls/aws-lc-rs", "tuic-client/aws-lc-rs", "tuic-server/aws-lc-rs"]

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core" }
tuic-core = { path = "../tuic-core" }
tuic-client = { path = "../tuic-client", default-features = false }
tuic-server = { path = "../tuic-server", default-features = false }
wind-tuic = { path = "../wind-tuic", default-features = false, features = ["server", "client", "quinn"] }

bytes = "1"
json5 = { version = "1.3" }
lexopt = { version = "0.3" }
eyre = { version = "0.6" }
fast-socks5 = { version = "1" }
rustls = { version = "0.23", default-features = false }
tracing-test = { version = "0.2" }
tracing = "0.1"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
aws-lc-rs = { version = "1", default-features = false, optional = true, features = ["prebuilt-nasm"] }
uuid = "1"
tokio-util = { version = "0.7", features = ["codec"] }

# The quiche backend (`wind-tuiche` -> tokio-quiche) is 64-bit only. On 64-bit we
# enable tuic-server's `quiche` feature (so the e2e tests exercise it) and pull
# wind-tuiche + a raw quinn client + rcgen for the cert-reload test. On 32-bit
# none of this is built and the quiche test files compile to nothing.
[target.'cfg(target_pointer_width = "64")'.dependencies]
tuic-server = { path = "../tuic-server", default-features = false, features = ["quiche"] }
wind-tuiche = { path = "../wind-tuiche", default-features = false, features = ["server"] }
quinn = { workspace = true, default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }