[package]
name = "wind-acl"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Generic access-control / routing engine for the wind proxy framework"

[dependencies]
# Wind framework
wind-core = { path = "../wind-core" }
wind-base = { path = "../wind-base" }

# Rule parsing / matching
pest = "2.8"
pest_derive = "2.8"
ipnet = { version = "2", features = ["serde"] }
ip_network = "0.4"

# Serde
serde = { version = "1", default-features = false, features = ["derive", "std"] }
derive_more = { version = "2", default-features = false, features = ["display"] }

# Logging / errors
tracing = "0.1"
eyre = { version = "0.6" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
toml = "1.0"
