[package]
name = "wind-acme"
version.workspace = true
repository.workspace = true
edition.workspace = true
description = "ACME certificate management for wind"
license = "MIT OR Apache-2.0"

[features]
default = ["aws-lc-rs"]
ring = ["rustls/ring", "rustls-acme/ring"]
aws-lc-rs = ["rustls/aws-lc-rs", "rustls-acme/aws-lc-rs"]

[dependencies]
# TLS / ACME
rustls = { version = "0.23", default-features = false }
rustls-acme = { git = "https://github.com/FlorianUekermann/rustls-acme", default-features = false, features = ["tower", "webpki-roots"] }

# HTTP challenge server
axum = { version = "0.8", features = ["tokio"] }

# Async
tokio = { version = "1", default-features = false, features = ["macros", "net", "time", "rt"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Utilities
arc-swap = "1"
eyre = "0.6"
tracing = "0.1"
