[package]
name = "wind-base"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core" }

tokio = { version = "1", default-features = false, features = ["net"] }

eyre = "0.6"
tracing = "0.1"
bytes = "1"
