[package]
name = "wind-core"
version = "0.1.1"
repository = "https://github.com/proxy-rs/wind"
edition = "2024"
description = "Wind core networking abstractions"
license = "MIT OR Apache-2.0"

[features]
default = ["quic"]
quic = ["quinn"]

[dependencies]
pin-project = "1"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "time", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }

quinn = { workspace = true, default-features = false, optional = true }
quinn-udp = "0.5"

socket2 = "0.6"

serde = { version = "1", features = ["derive"] }

futures = "0.3"
bytes = "1"
eyre = "0.6"
pin-project-lite = "0.2"

tracing = "0.1"
const-str = "0.7"
rand = "0.9"

[dev-dependencies]
serde_json = "1"