[package]
name = "wind-naive"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Cronet-based networking
cronet-rs = { git = "https://github.com/rust-proxy/cronet-rs", branch = "next" }

# Wind core abstractions
wind-core = { version = "0.1.1", path = "../wind-core" }

# Async runtime
tokio = { version = "1", default-features = false, features = ["net", "sync", "io-util", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }

# Error handling
eyre = "0.6"
tracing = "0.1"

# Standard lib
bytes = "1"
