[package]
name = "wind-socks"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core"}
# Async
tokio = { version = "1", default-features = false, features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
fast-socks5 = "1.0.0-rc.0" 

# Pattern
arc-swap = "1"

socket2 = "0.6"
snafu = "0.8"
eyre = "0.6"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
eyre = "0.6"
