[package]
name = "wind-test"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core"}
wind-socks = { version = "0.1.1", path = "../wind-socks"}
wind-tuic = { version = "0.1.1", path = "../wind-tuic"}

# Async
tokio = { version = "1", default-features = false, features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# TLS
rustls = "0.23"
rcgen = "0.13"

# Testing
criterion = "0.4"
fast-socks5 = "1.0.0-rc.0"
eyre = "0.6"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }


[[bench]]
name = "arc_bench"
harness = false