[package]
name = "wind-tuic"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = ["server", "client", "aws-lc-rs"]
decode = []
encode = []
server = ["decode"]
client = ["encode"]
aws-lc-rs = [
    "rustls/aws-lc-rs",
    "quinn/rustls-aws-lc-rs"
]
ring = [
    "rustls/ring",
    "quinn/rustls-ring"
]

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core", features = ["quic"]}


# Async
tokio = { version = "1", default-features = false, features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio"]}
crossfire = { version = "2", features = ["tokio"] }

tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

bytes = "1"
uuid = "1"
hex = { package = "const-hex", version = "1" }

eyre = "0.6"

# Patterns
snafu = "0.8"
num_enum = "0.7"
enum_dispatch = "0.3"
secrecy = "0.10"
pin-project = "1"
moka = { version = "0.12", features = ["future"] }
portable-atomic = { version = "1" }
arc-swap = "1"

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["logging"] }
rustls = { version  = "0.23", default-features = false }
rustls-platform-verifier = { version = "0.6", default-features = false }


tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "io-util"] }
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
rcgen = "0.13"
test-log = { version = "0.2", features = ["trace"] }