[package]
name = "wind-tuic"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = ["server", "client", "quiche", "quinn", "aws-lc-rs"]
decode = []
encode = []
server = ["decode"]
client = ["encode"]

# Quiche Backend
boringssl = []   # Enable BoringSSL support via quiche
quiche = ["dep:quiche"]

# Quinn Backend
quinn = ["dep:quinn", "dep:quinn-congestions", "dep:tokio-rustls", "dep:rustls", "dep:rustls-platform-verifier"]
aws-lc-rs = [
    "rustls/aws-lc-rs",
    "quinn/rustls-aws-lc-rs",
    "dep:aws-lc-rs",
    "aws-lc-rs?/prebuilt-nasm"
]
ring = [
    "rustls/ring",
    "quinn/rustls-ring"
]

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core", features = ["quic"] }

# Async
tokio = { version = "1", default-features = false, features = ["net", "time", "rt", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Utilities
bytes = "1"
eyre = "0.6"
uuid = { version = "1", features = ["v4"] }
crossfire = { version = "2", features = ["tokio"] }
moka = { version = "0.12", features = ["future"] }
snafu = "0.9"
num_enum = "0.7"
hex = { package = "const-hex", version = "1" }
arc-swap = "1.9.1"
serde = { version = "1", features = ["derive"] }
enum_dispatch = "0.3"
secrecy = "0.10"
pin-project = "1"
portable-atomic = { version = "1" }
thiserror = "2"
tracing = "0.1"

# QUIC with quiche
quiche = { version = "0.28", default-features = false, features = ["boringssl-boring-crate", "qlog"], optional = true }

# QUIC with quinn
quinn = { workspace = true, default-features = false, features = ["runtime-tokio"], optional = true }
quinn-congestions = { workspace = true, optional = true }

# TLS for quinn
tokio-rustls = { version = "0.26", default-features = false, features = ["logging"], optional = true }
rustls = { version  = "0.23", default-features = false, optional = true }
rustls-platform-verifier = { version = "0.7", default-features = false, optional = true }
aws-lc-rs = { version = "*", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros", "rt-multi-thread", "io-util"] }
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
rcgen = "0.14.7"
test-log = { version = "0.2", features = ["trace"] }
